bookinfo/overlay/config/edge-virtualservice/cloudflare-istio/1-bookinfo-vs-single/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - "bookinfo.kapoozi.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      #cloudflare tls secret in istio-system
      credentialName: cf-upstream-tls
    hosts:
    - "bookinfo.kapoozi.com"
